libs/isograph-react/src/tests/__isograph/Query/errors/parameters_type.ts
export type Query__errors__parameters = {
  readonly id: string,
};
